; ModuleID = '/home/carl/AnghaBench/fastdfs/test/extr_dfs_func_pc.c_download_file.c'
source_filename = "/home/carl/AnghaBench/fastdfs/test/extr_dfs_func_pc.c_download_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@pTrackerServer = common dso_local global i32 0, align 4
@downloadFileCallback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @download_file(i8* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_6__, align 4
  %10 = alloca %struct.TYPE_6__*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load i32, i32* @pTrackerServer, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @tracker_query_storage_fetch1(i32 %12, %struct.TYPE_6__* %9, i8* %13)
  store i32 %14, i32* %8, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  store i32 %17, i32* %4, align 4
  br label %36

18:                                               ; preds = %3
  %19 = call %struct.TYPE_6__* @getConnectedStorageServer(%struct.TYPE_6__* %9, i32* %8)
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %10, align 8
  %20 = icmp eq %struct.TYPE_6__* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %18
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %4, align 4
  br label %36

23:                                               ; preds = %18
  %24 = load i8*, i8** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @strcpy(i8* %24, i32 %26)
  %28 = load i32, i32* @pTrackerServer, align 4
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = load i32, i32* @downloadFileCallback, align 4
  %32 = call i32 @storage_download_file_ex1(i32 %28, %struct.TYPE_6__* %29, i8* %30, i32 0, i32 0, i32 %31, i32* null, i32* %11)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %11, align 4
  %34 = load i32*, i32** %6, align 8
  store i32 %33, i32* %34, align 4
  %35 = load i32, i32* %8, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %23, %21, %16
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @tracker_query_storage_fetch1(i32, %struct.TYPE_6__*, i8*) #1

declare dso_local %struct.TYPE_6__* @getConnectedStorageServer(%struct.TYPE_6__*, i32*) #1

declare dso_local i32 @strcpy(i8*, i32) #1

declare dso_local i32 @storage_download_file_ex1(i32, %struct.TYPE_6__*, i8*, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
